# RAG-PROJECT

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: ask.py  health.py  ingest.py
app/api/schemas/: request.py  response.py
app/core/: config.py  constants.py  logging.py
app/embeddings/: __init__.py  embedding.py  models.py
app/evaluation/: evaluator.py  metrics.py
app/generation/: __init__.py  citations.py  confidence.py  generator.py  prompt_builder.py
app/ingestion/: chunker.py  deduplicator.py  loader.py  pipeline.py
app/retrieval/: dense_retriever.py  fusion.py  hybrid_retriever.py  reranker.py  sparse_retriever.py
app/services/: embedding_service.py  ingestion_service.py  rag_service.py
app/vectorstores/: base.py  chroma_store.py  faiss_store.py
scripts/: __init__.py  evaluate.py  ingest.py  test_hybrid.py  test_rag.py
